# dps-for-iot

dps-micro/include/dps/: targets.h
dps-micro/include/dps/private/: dtls.h
dps-micro/src/: cbor.c  gcm.c  sha2.c
dps-micro/src/posix/: network.c
dps-micro/src/win32/: network.c
dps-micro/src/zephyr/: dps_mbedtls_config.h  network.c  timer.c
dps-micro/test/: test.h
dps-micro/zephyr/: CMakeLists.txt  prj.conf
